# apollo-m1-playground

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  adafruit-matrix-portal-s3.factory.yaml  adafruit-matrix-portal-s3.yaml  apollo-automation-m1-rev4.factory.yaml  apollo-automation-m1-rev4.yaml  apollo-automation-m1-rev6.factory.yaml  apollo-automation-m1-rev6.yaml  apollo-m1-rev4.factory.yaml  apollo-m1-rev4.yaml  apollo-m1-rev6.factory.yaml  apollo-m1-rev6.yaml  apollo-m1-rev7.factory.yaml  apollo-m1-rev7.yaml  apollo-m1.example.yaml  project-template-rev4-factory.yaml  project-template-rev4.factory.yaml  project-template-rev4.yaml  project-template-rev7-factory.yaml  project-template-rev7.factory.yaml  project-template-rev7.yaml  pyproject.toml  secrets.example.yaml  styles.yaml  vars.example.yaml
.github/workflows/: ci.yml  publish-firmware.yml  publish-pages.yml
scripts/: yaml_lint.py
src/: page_bios.h  page_dice.h  page_eq.h  page_fireworks.h  page_fireworks_physics.h  text_utils.h
static/: _config.yml  index.md
